--- a/bin/fnode_loading_analysis.ipynb
+++ b/bin/fnode_loading_analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -26,66 +26,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "data at: 2018_07_10/2018_07_10_13_57_57_loading-iy-long-cycle/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'rb_d2_mot_amp']\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "no loading observed\n",
-      "ivar: -8.6000\tcloading: 0.210\trloading: 0.171\t\tcretention: 0.738 +- 0.014\trretention: 0.947 +- 0.014\n",
-      "ivar: -9.0000\tcloading: 0.226\trloading: 0.128\t\tcretention: 0.748 +- 0.020\trretention: 0.922 +- 0.020\n",
-      "ivar: -9.4000\tcloading: 0.277\trloading: 0.089\t\tcretention: 0.874 +- 0.016\trretention: 0.966 +- 0.016\n",
-      "ivar: -9.8000\tcloading: 0.179\trloading: 0.079\t\tcretention: 0.872 +- 0.025\trretention: 0.924 +- 0.025\n",
-      "ivar: -10.2000\tcloading: 0.192\trloading: 0.029\t\tcretention: 0.943 +- 0.028\trretention: 0.966 +- 0.028\n",
-      "ivar: -10.6000\tcloading: 0.203\trloading: 0.004\t\tcretention: 0.842 +- 0.182\trretention: 0.750 +- 0.182\n"
+      "ivars: [u'Iy', u'iterator']\n",
+      "ivar: 0.0000\tcloading: 0.099\trloading: 0.564\t\tcretention: 0.700 +- 0.037\trretention: 0.877 +- 0.037\n",
+      "ivar: 0.1000\tcloading: 0.545\trloading: 0.158\t\tcretention: 0.855 +- 0.102\trretention: 0.625 +- 0.102\n",
+      "ivar: 0.2000\tcloading: 0.475\trloading: 0.119\t\tcretention: 0.792 +- 0.120\trretention: 0.583 +- 0.120\n",
+      "ivar: 0.0000\tcloading: 0.515\trloading: 0.059\t\tcretention: 0.750 +- 0.128\trretention: 0.833 +- 0.128\n",
+      "ivar: 0.0000\tcloading: 0.426\trloading: 0.050\t\tcretention: 0.791 +- 0.184\trretention: 0.600 +- 0.184\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:102: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n",
-      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:258: RuntimeWarning: divide by zero encountered in divide\n",
-      "  e['iterations'][i]['retention'] = retention/loaded\n",
-      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:258: RuntimeWarning: invalid value encountered in divide\n",
-      "  e['iterations'][i]['retention'] = retention/loaded\n"
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (2,5) into shape (1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-9769950564a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mretention\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'retention'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretention\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     ))\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_experiment_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0mxlab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'variable_desc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'variable_list'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'description'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.pyc\u001b[0m in \u001b[0;36msave_experiment_data\u001b[0;34m(self, filename_prefix, path)\u001b[0m\n\u001b[1;32m    812\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msave_experiment_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename_prefix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    813\u001b[0m         \u001b[0;34m\"\"\"Saves data to files with the specified prefix.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 814\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    815\u001b[0m             \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'source_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    816\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_json_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename_prefix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilename_prefix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.pyc\u001b[0m in \u001b[0;36msave_retention_data\u001b[0;34m(self, filename_prefix, path, shot)\u001b[0m\n\u001b[1;32m    831\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    832\u001b[0m             \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'source_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 833\u001b[0;31m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    834\u001b[0m             np.save(\n\u001b[1;32m    835\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename_prefix\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.npy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.pyc\u001b[0m in \u001b[0;36mget_retention\u001b[0;34m(self, shot, fmt)\u001b[0m\n\u001b[1;32m    388\u001b[0m                         \u001b[0;31m# print retention\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    389\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mfmt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'numpy'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfmt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'np'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 390\u001b[0;31m                     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mivar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretention\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloading\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    391\u001b[0m                     \u001b[0;31m# print retention\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (2,5) into shape (1)"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2b53e7fa9ec4268973d34161fa4ea89",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another notebook frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "FigureCanvasNbAgg()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "exp_name = '2018_05_08_15_04_02_rb-loading-cs'\n",
+    "exp_name = '2018_07_10_13_57_57_loading-iy-long-cycle'\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -94,8 +62,8 @@
     "q = qdp.QDP(base_data_path=dp)\n",
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
-    "cs_cuts = [[141],[3]]\n",
-    "rb_cuts = [[86],[3]]\n",
+    "cs_cuts = [[30],[3]]\n",
+    "rb_cuts = [[30],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
     "retention = q.apply_thresholds(exclude_rois=[2])\n",
@@ -116,7 +84,7 @@
     "for e in range(len(retention['ivar'])):\n",
     "    ax.plot(retention['ivar'][e, :, 0], retention['loading'][e, :, 0], 'bo')\n",
     "    ax.plot(retention['ivar'][e, :, 0], retention['loading'][e, :, 1], 'rx')\n",
-    "ax.set_ylim(0, 1.05*np.max(retention['loading']))\n",
+    "ax.set_ylim(0, 1.05*np.nanmax(retention['loading']))\n",
     "ax.set_xlabel(xlab)\n",
     "ax.set_ylabel('loading')\n",
     "\n",
