--- a/bin/fnode_retention_analysis.ipynb
+++ b/bin/fnode_retention_analysis.ipynb
@@ -11,12 +11,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os.path\n",
-    "dp = '/home/ebert/jupyter-notebooks/FNode-data'"
+    "dp = '/home/ebert/jupyter-notebooks/FNode-data'\n",
+    "\n",
+    "exclude = [2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -25,25 +27,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "data at: 2018_07_10/2018_07_10_15_27_56_rbcs-collisions-32-t1-test/results.hdf5\n",
       "name 'fort_exp' is not defined\n",
       "name 'rb_uwave_freq' is not defined\n",
-      "ivars: [u'rb_d2_mot_amp']\n",
-      "ivar:\t-9.0\tretention:[ 0.88053097  0.88663968] +- [ 0.01540484  0.0097947 ]\n",
-      "ivar:\t-100.0\tretention:[ 0.92110874  0.        ] +- [        nan  0.25750261]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ebert/jupyter-notebooks/FNode/analyses/qdp/QDP/qdp.py:101: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  errs[r] = (z/n[r].astype('float'))*np.sqrt(ns[r].astype('float')*(1.0-ns[r].astype('float')/n[r].astype('float')))\n"
+      "ivars: [u'iterator']\n",
+      "ivar:\t0.0\tretention:[ 0.70103093  0.                 nan] +- [ 0.02032855  0.02032855  0.02032855]\n",
+      "ivar:\t1.0\tretention:[ 0.68918919  0.                 nan] +- [ 0.01965668  0.01965668  0.01965668]\n",
+      "ivar:\t2.0\tretention:[ 0.63736264  0.                 nan] +- [ 0.02032855  0.02032855  0.02032855]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "560c80455830421fb874bc7d1cba846c",
+       "model_id": "a2d3555d78654c24b75cf09a34fc9fa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +67,7 @@
     }
    ],
    "source": [
-    "exp_name = ''\n",
+    "exp_name = '2018_07_10_15_27_56_rbcs-collisions-32-t1-test'\n",
     "if exp_name:\n",
     "    exp_date = '_'.join(exp_name.split('_')[:3])\n",
     "    experiment_file = os.path.join(exp_date, exp_name, 'results.hdf5')\n",
@@ -81,11 +77,11 @@
     "q.load_data_file(experiment_file)\n",
     "print \"ivars: {}\".format(q.experiments[0]['variable_list'])\n",
     "roi_map = ['cs', 'rb']\n",
-    "cs_cuts = [[36],[2]]\n",
-    "rb_cuts = [[48],[3]]\n",
+    "cs_cuts = [[30],[3]]\n",
+    "rb_cuts = [[30],[3]]\n",
     "q.set_thresholds(cs_cuts, roi=0)\n",
     "q.set_thresholds(rb_cuts, roi=1)\n",
-    "retention = q.apply_thresholds()\n",
+    "retention = q.apply_thresholds(exclude_rois=exclude)\n",
     "tbl_str = \"ivar:\\t{0}\\tretention:{1} +- {2}\"\n",
     "entries = np.product(retention['retention'].shape[:-1])\n",
     "for i in range(entries):\n",
@@ -114,6 +110,27 @@
     "fn = os.path.join(dp, q.experiments[0]['source_path'], 'retention_scan.{}')\n",
     "for fmt in fmts:\n",
     "    fig.savefig(fn.format(fmt), dpi=200, format=fmt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  0.5,  1. ,  1.5,  2. ,  2.5,  3. ,  3.5,  4. ,  4.5,  5. ,\n",
+       "        5.5,  6. ])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retention['ivar'][e, :, 0]"
    ]
   },
   {
